imagem dos icones descolocando para dentro do input, pagina de login redirecionando para pagina home caso o usuario esteja validado, e salvando no localstorage

--- a/home.html
+++ b/home.html
@@ -42,10 +42,10 @@
         <hr size="50" class="home-footer-bar">
         <p class="home-footer-message-refresh">Application refresh in</p>
         <div class="time-footer">
-            <p class="time-footer-number-refresh">600</p>
+            <p id="time-seconds-refresh" class="time-footer-number-refresh"></p>
             <p class="time-footer-text-seconds">seconds</p>
         </div>
-        <div class="footer-continue-browsing">Continuar Navegando</div>
+        <div id="continue-browsing" class="footer-continue-browsing">Continuar Navegando</div>
         <div class="logout">Logout</div>        
     </footer> 
     <script src="./js/home.js"></script>  
