--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="message-ola">Olá,</p>
             <p class="message-login">Para continuar navegando de forma segura, efetue o login na rede.</p>
         </div>
-        <form class="form-login">           
+        <form id="form-login" class="form-login">           
             <label class="form-label-login">Login</label>
             <div class="form-inputs">
                 <input type="text" id="user" class="login-user" placeholder="Usuário" name="User" required><img src="./images/contact.svg" class="login-bust">
@@ -28,5 +28,5 @@
     <img src="./images/logo-compasso.png" class="logo-compass" alt="logo-compass"> 
     <img src="./images/logo-compass-notebook.png" class="logo-compass-notebook" alt="imagem com fundo escuro e um notebook">
     <script src="./js/script.js"></script>
-</body>
+</body> 
 </html>
