lógica de validação e estilização da mensagem de erro caso login e senha incorretos

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <label class="form-label-login">Login</label>
             <div class="form-inputs">
                 <input type="text" id="user" class="login-user" placeholder="Usuário" name="User" required><img src="./images/contact.svg" class="login-bust">
-                <input type="text" id="password" class="login-password" placeholder="Senha" name="Password" required><img src="./images/padlock.svg" class="login-padlock">
+                <input type="password" id="password" class="login-password" placeholder="Senha" name="Password" required><img src="./images/padlock.svg" class="login-padlock">
             </div>
+            <div class="message-error">Ops, usuário ou senha inválidos. Tente novamente!</div>
             <input type="submit" id="submit" class="login-submit" value="Continuar">
         </form>
     </section>  
