Na pagina home, lógica de clima pela geolocalização do usuário.

--- a/home.html
+++ b/home.html
@@ -20,8 +20,11 @@
             <div id="home-date-full-year" class="home-date-full-year"></div>
         </div>
         <div class="home-climate">
-            <div class="home-city">Recife - PE</div>
-            <div class="home-degrees">sol - 28º</div>
+            <div class="home-city"></div>
+            <div class="container">
+                <img class="icon">
+                <div class="home-degrees"></div>
+            </div>
         </div>
     </header>
     <main class="home-body">
