--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <form id="form-login" class="form-login">           
             <label class="form-label-login">Login</label>
             <div class="form-inputs">
-                <input type="text" id="user" class="login-user" placeholder="Usuário" name="User" required><img src="./images/contact.svg" class="login-bust">
-                <input type="password" id="password" class="login-password" placeholder="Senha" name="Password" required><img src="./images/padlock.svg" class="login-padlock">
+                <input type="text" id="user" class="login-user" placeholder="Usuário" name="User" maxlength="26" required><img src="./images/contact.svg" class="login-bust">
+                <input type="password" id="password" class="login-password" placeholder="Senha" name="Password" maxlength="15" required><img src="./images/padlock.svg" class="login-padlock">
             </div>
             <div class="message-error">Ops, usuário ou senha inválidos. Tente novamente!</div>
             <input type="submit" id="submit" class="login-submit" value="Continuar">
