logica de logout que exibe alert para o usuario decidir ou não permanecer na pagina e limpar localstorage caso deseje sair

--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
             <p class="time-footer-text-seconds">seconds</p>
         </div>
         <div id="continue-browsing" class="footer-continue-browsing">Continuar Navegando</div>
-        <div class="logout">Logout</div>        
+        <div id="logout" class="logout">Logout</div>        
     </footer> 
     <script src="./js/home.js"></script>  
 </body>
