ultimos ajustes de responsividade no footer da pagina home

--- a/home.html
+++ b/home.html
@@ -50,7 +50,8 @@
             <p class="time-footer-text-seconds">seconds</p>
         </div>
         <div id="continue-browsing" class="footer-continue-browsing">Continuar Navegando</div>
-        <div id="logout" class="logout">Logout</div>        
+        <div id="logout" class="logout">Logout</div>   
+        <div class="home-footer-message-autentication">Essa janela do navegador é usada para manter sua sessão de autenticação ativa. Deixe-a aberta em segundo plano e abra uma nova janela para continuar a navegar.</div>    
     </footer> 
     <script src="./js/home.js"></script>  
 </body>
